Update for auto asset loading

--- a/style.css
+++ b/style.css
@@ -2,4 +2,7 @@
  * Note that these styles are loaded *before* editor styles, so that
  * editor-specific styles using the same selectors will take precedence.
  */
- 
+
+.wp-block-mkaz-test-block {
+	background-color: orange;
+}
