--- a/editor.css
+++ b/editor.css
@@ -2,3 +2,7 @@
  * Note that these styles are loaded *after* common styles, so that
  * editor-specific styles using the same selectors will take precedence.
  */
+
+.wp-block-mkaz-test-block {
+	background-color: cornflowerblue;
+}
